--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node src/index.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@prisma/client": "^4.14.1",
